Add basic skeleton

--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <title>Layouts - Home</title>
+    <link rel="stylesheet" href="css/home.css" />
+</head>
 
-  <body>
-    <header></header>
+<body>
+    <header>
+        <nav>
+            <a id="site-title" href="index.html">
+                <h2>Different Layouts</h2>
+            </a>
 
-    <main></main>
-  </body>
+            <ul id="nav-list">
+                <a id="three-columns" href="three-columns.html" class="nav-item">
+                    <li>
+                        Three Columns
+                    </li>
+                </a>
+                <a id="right-sidebar" href="sidebar.html" class="nav-item">
+                    <li>
+                        Right Sidebar
+                    </li>
+                </a>
+
+                <a id="three-blocks" href="three-blocks.html" class="nav-item">
+                    <li>
+                        Three Blocks
+                    </li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1 id="title">Home</h1>
+    </main>
+
+    <footer>
+        Juan Gallardo. 2020
+    </footer>
+</body>
+
 </html>
