Add Three Columns structure

--- a/three-columns.html
+++ b/three-columns.html
@@ -38,16 +38,23 @@
 
     <main>
         <h1 id="title">Three Columns Layout</h1>
-        <section id="main-content">
-            <h1 id="title">Right Sidebar Layout</h1>
 
+        <article id="article1">
             <h2>Ea dolor ullamco tempor consequat.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat et delectus eveniet cum explicabo veritatis officiis ea culpa tempore nihil ut provident voluptates non, quas excepturi tenetur porro. Doloremque, ipsam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eaque laudantium, magni quae, illum quisquam tempore laboriosam nesciunt culpa consectetur, rem numquam debitis perspiciatis deleniti sed incidunt unde veritatis perferendis.</p>
 
+            <h3>Excepteur enim dolore ullamco nisi est elit aliqua sint ad laborum.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat et delectus eveniet cum explicabo veritatis officiis ea culpa tempore nihil ut provident voluptates non, quas excepturi tenetur porro. Doloremque, ipsam.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eaque laudantium, magni quae, illum quisquam tempore laboriosam nesciunt culpa consectetur, rem numquam debitis perspiciatis deleniti sed incidunt unde veritatis perferendis.</p>
+        </article>
+
+        <article id="article2">
             <h2>Do laboris sunt deserunt dolor sit fugiat eu aute deserunt velit anim nostrud id.</h2>
+
+            <h3>Adipisicing irure deserunt ea eiusmod anim excepteur minim incididunt id.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid cumque, expedita sit, commodi optio fuga esse accusantium autem ratione corporis quod est quae. Rem facilis rerum temporibus sit sed quasi!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur corporis quae facilis quidem vitae cupiditate eaque a tempora hic unde incidunt sint consectetur fugit ullam in enim, necessitatibus, pariatur vero!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur corporis quae facilis quidem vitae cupiditate eaque a tempora hic unde incidunt sint consectetur fugit ullam in enim, necessitatibus, pariatur vero!
+            </p>
 
             <h3>Excepteur id ullamco pariatur mollit cillum ad eiusmod ipsum consectetur ex ipsum deserunt fugiat cillum.
             </h3>
@@ -57,7 +64,17 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus molestias explicabo perferendis asperiores recusandae, cumque distinctio veritatis. Quos voluptatum veniam autem atque necessitatibus blanditiis, ullam eum quidem consectetur
                 nemo?
             </p>
-        </section>
+        </article>
+
+        <article id="article3">
+            <h2>Do qui laboris labore aute laborum eiusmod elit non.</h2>
+
+            <h3>Ex sint aute cupidatat velit cillum excepteur sint ut commodo.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolorum exercitationem nemo quia, eveniet cumque? Delectus ratione rerum rem, vero ipsa dolor consequatur minima placeat, ex iste perspiciatis atque nulla.</p>
+
+            <h3>Laboris sint tempor dolor sint ad incididunt ullamco exercitation reprehenderit dolore qui minim fugiat.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis esse fugiat unde commodi eius! Nulla autem vel, voluptatem impedit aliquam, esse porro incidunt blanditiis voluptate sunt cumque libero id quisquam?</p>
+        </article>
     </main>
 
     <footer>
