Add primitive layout

--- a/three-columns.html
+++ b/three-columns.html
@@ -12,10 +12,16 @@
     <header>
         <nav>
             <a id="site-title" href="index.html">
-                <h2>Different Layouts</h2>
+                <h2>Layouts</h2>
             </a>
 
             <ul id="nav-list">
+                <a id="three-columns-primitive" href="primitive.html" class="nav-item">
+                    <li>
+                        Three Columns Primitive
+                    </li>
+                </a>
+
                 <a id="three-columns" href="three-columns.html" class="nav-item">
                     <li>
                         Three Columns
