--- a/primitive.html
+++ b/primitive.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layouts - Home</title>
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -44,11 +44,12 @@
     </header>
 
     <main>
-        <h1 id="title">Home</h1>
+        <section id="column1"></section>
+        <section id="column2"></section>
+        <section id="column3"></section>
     </main>
 
     <footer>
-        Juan Gallardo. 2020
     </footer>
 </body>
 
