--- a/sidebar.html
+++ b/sidebar.html
@@ -39,11 +39,18 @@
 
         <nav>
             <ul id="nav-list">
+                <a id="three-columns-primitive" href="primitive.html" class="nav-item">
+                    <li>
+                        Three Columns Primitive
+                    </li>
+                </a>
+
                 <a id="three-columns" href="three-columns.html" class="nav-item">
                     <li>
                         Three Columns
                     </li>
                 </a>
+
                 <a id="right-sidebar" href="sidebar.html" class="nav-item">
                     <li>
                         Right Sidebar
