--- a/three-blocks.html
+++ b/three-blocks.html
@@ -12,10 +12,16 @@
     <header>
         <nav>
             <a id="site-title" href="index.html">
-                <h2>Different Layouts</h2>
+                <h2>Layouts</h2>
             </a>
 
             <ul id="nav-list">
+                <a id="three-columns-primitive" href="primitive.html" class="nav-item">
+                    <li>
+                        Three Columns Primitive
+                    </li>
+                </a>
+
                 <a id="three-columns" href="three-columns.html" class="nav-item">
                     <li>
                         Three Columns
@@ -37,7 +43,7 @@
     </header>
 
     <main>
-        <h1 id="title">Three Columns Layout</h1>
+        <h1 id="title">Three Blocks Layout</h1>
 
         <article id="article1">
             <h2>Ea dolor ullamco tempor consequat.</h2>
